# Photo-Bridge

./: .gitignore  README.md  TASKS.md  cli-ui-protocol.ts  google-photos-metadata-fix-and-reupload-strategy.md  package.json  release.sh  tsconfig.json  tsup.config.ts  zip-code.sh
.claude/: launch.json  settings.local.json
docs/: PRD.json  README.spatial.md  refactor-tracker.md
fixtures/media/: color_bars_hd.mov  solid_blue.mov  solid_red.mov
outputs/: first-customer-finder-report.html
outputs/design-audit/: audit-apple-design.md  audit-emil-design-eng.md  design-review.html
scripts/: release.ts  tsconfig.json
src/: index.ts
src-cli/: index.ts  package.json  types.d.ts
src-cli/commands/: check-adb.ts  convert.ts  copy.ts  fix-dates.ts  fix-snapchat-dates.ts  gallery.ts  pixel.ts  pull-from-pixel.ts  push-to-pixel.ts  randomize.ts  shell.ts  split.ts
src-cli/processors/: audio.ts  image.ts  legacy-video.ts  video.ts
src-cli/utils/: concurrency.ts  constants.ts  conversion-file-error.ts  dates.ts  df-parse.ts  hash.ts  json-sidecar.ts  logger.ts  sibling-directory.ts  tool-paths.ts  validation.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: adb_track.rs  lib.rs  tooling.rs
src-ui/: components.json  eslint.config.js  index.html  package.json  tsconfig.json
src-ui/src/: main.tsx  (+2 more)
src-web/: index.html  package.json  tsconfig.json
stock/: color_bars.mov  testsrc.mov
tests/: decider.test.ts  integration.ffmpeg.test.ts  pixel-push.e2e.test.ts
types/: protocol.ts
(+138 files in other folders)
